Gatewayapi/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webserver-httproute
spec:
  parentRefs:
  - name: web-gateway
  hostnames:
  - "www.thirutech.com"
  - "gitlab-tt.ddnsking.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: my-nginx
      port: 80
